--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "cd backend && node server.js"
+    "server": "cd backend && node server.js",
+    "full": "react-scripts start &&cd backend && node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
