--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/node_modules/*
 backend/node_modules/.bin/mime
 backend/node_modules/.bin/semver
 backend/node_modules/accepts/HISTORY.md
