--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd backend && node server.js",
-    "heroku-postbuild": "(cd backend && node server.js) & npm start"
+    "heroku-postbuild": "(cd backend && npm install) & (cd backend && node server.js) & npm start"
   },
   "eslintConfig": {
     "extends": "react-app"
