--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap-typeahead": "^5.0.0-rc.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
