--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "cd backend && node server.js"
+    "client": "npm start",
+    "server": "cd backend && nodemon server.js",
+    "dev": "concurrently \"npm run client\"  \"npm run server\" "
   },
   "eslintConfig": {
     "extends": "react-app"
