--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.7",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.25",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "react-transition-group": "^4.4.1",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "validator": "^13.1.1"
   }
 }
