--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "whatwg-fetch": "^3.4.0"
