--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@okta/okta-react": "^3.0.2",
-    "@okta/okta-signin-widget": "^4.2.2",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,7 +24,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
-    "reactstrap": "^8.4.1",
     "whatwg-fetch": "^3.4.0"
   },
   "scripts": {
