--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
@@ -28,10 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
     "client": "npm start",
-    "server": "cd backend && nodemon server.js",
-    "dev": "concurrently \"npm run client\"  \"npm run server\" "
+    "server": "cd backend && nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
